# AdvProgTek

./: README.md
Exercises/: Checklists-Statements.md  Checklists.md  Readme.md
Exercises/W01/: Readme.md
Exercises/W02/: Readme.md
Exercises/W03/: 250611.ipynb  Readme.md
Exercises/W04/: Readme.md
Exercises/W05/: Readme.md
Exercises/W06/: Readme.md
Exercises/W07/: Readme.md
Exercises/W08/: Readme.md
Exercises/W09/: Readme.md
Exercises/W10/: Readme.md
Exercises/W11/: Readme.md
Exercises/W12/: CMakeLists.txt  Readme.md  cmake.md  notes.txt
Principles/: GreatCode.md  Readme.md
Project/: Compiler.md  Demo-REQs.md  Readme.md
Review/: CD Notations.md  Readme.md
Seminar/: PL Ranking.md  REFs.md  Readme.md
Test/: Code-01.md  Quiz-01.md  Quiz-02.md  Test.2025.08.12.md  pre-EXAM-01.md
